logs.txt
# macos logs 
   Compiling chrono v0.4.42
   Compiling rusqlite v0.31.0
error[E0412]: cannot find type `PlaybackState` in this scope
  --> src/db/playback.rs:40:78
   |
40 | pub fn get_playback_state(conn: &Connection, media_id: i64) -> Result<Option<PlaybackState>> {
   |                                                                              ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct through its public re-export
   |
 1 + use crate::db::PlaybackState;
   |

error[E0422]: cannot find struct, variant or union type `PlaybackState` in this scope
  --> src/db/playback.rs:48:12
   |
48 |         Ok(PlaybackState {
   |            ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct through its public re-export
   |
 1 + use crate::db::PlaybackState;
   |

error[E0282]: type annotations needed
   --> src/main.rs:227:19
    |
227 |         .map_err(|e| e.to_string())
    |                   ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
227 |         .map_err(|e: /* Type */| e.to_string())
    |                    ++++++++++++

Some errors have detailed explanations: E0282, E0412, E0422.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `cinevault` (bin "cinevault") due to 3 previous errors
       Error failed to build app: failed to build app
Error: Command "npm ["run","tauri","build"]" failed with exit code 1

# Windows logs
   Compiling rusqlite v0.31.0
   Compiling chrono v0.4.42
error: proc macro panicked
   --> src\main.rs:307:14
    |
307 |         .run(tauri::generate_context!())
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = help: message: failed to parse icon D:\a\CineVault\CineVault\src-tauri\icons/icon.ico: failed to fill whole buffer

error[E0412]: cannot find type `PlaybackState` in this scope
  --> src\db\playback.rs:40:78
   |
40 | pub fn get_playback_state(conn: &Connection, media_id: i64) -> Result<Option<PlaybackState>> {
   |                                                                              ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct through its public re-export
   |
 1 + use crate::db::PlaybackState;
   |

error[E0422]: cannot find struct, variant or union type `PlaybackState` in this scope
  --> src\db\playback.rs:48:12
   |
48 |         Ok(PlaybackState {
   |            ^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct through its public re-export
   |
 1 + use crate::db::PlaybackState;
   |

error[E0282]: type annotations needed
   --> src\main.rs:227:19
    |
227 |         .map_err(|e| e.to_string())
    |                   ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
227 |         .map_err(|e: /* Type */| e.to_string())
    |                    ++++++++++++

Some errors have detailed explanations: E0282, E0412, E0422.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `cinevault` (bin "cinevault") due to 4 previous errors
       Error failed to build app: failed to build app
Error: Command "npm ["run","tauri","build"]" failed with exit code 1
